--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=userapp
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/userappdb
-spring.datasource.username=root
-spring.datasource.password=kampo
+spring.datasource.username=your_db_username
+spring.datasource.password=your_db_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
